# sfinks

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
bird_lady/: CMakeLists.txt
bird_lady/include/bird_lady/: bird.hpp  birds_scorer.hpp  board.hpp  card_handle.hpp  consts.hpp  deck.hpp  game.hpp  player.hpp  scorer.hpp
bird_lady/src/: bird.cpp  birds_scorer.cpp  board.cpp  deck.cpp  game.cpp  player.cpp  scorer.cpp
colors/: CMakeLists.txt
colors/include/colors/: game.hpp
colors/src/: game.cpp
examples/bird_lady/: CMakeLists.txt  main.cpp  main_2p.cpp  main_3p.cpp  main_4p.cpp
examples/colors/: CMakeLists.txt  main_2p.cpp  main_3p.cpp  main_4p.cpp  main_5p.cpp  main_6p.cpp
examples/tic_tac_toe/: CMakeLists.txt  main.cpp
sfinks/: CMakeLists.txt
sfinks/include/sfinks/: action_result.hpp  agent.hpp  agent.tpp  engine.hpp  engine.tpp  game.hpp  game.tpp  game_history.hpp  resource_data.hpp
sfinks/src/: agent.cpp  engine.cpp
stats/: bird_lady_action_stats.rb  bird_lady_card_stats.rb  birds_tex.rb  stats.rb  stats_tex.rb  tex.rb
stats/bird_lady/2p/: card_stats.yml  policy_actions.yml
stats/bird_lady/3p/: card_stats.yml  policy_actions.yml
stats/bird_lady/4p/: card_stats.yml  greedy_p1.yml  greedy_p2.yml  greedy_p3.yml  greedy_p4.yml  policy.yml  policy_actions.yml  random_p2.yml
stats/colors/2p/: greedy_p1.yml  greedy_p2.yml  policy.yml  random.yml  random_p1.yml  random_p2.yml
stats/colors/3p/: greedy_p1.yml  greedy_p2.yml  greedy_p3.yml  policy.yml  random.yml  random_p1.yml  random_p2.yml  random_p3.yml
stats/colors/4p/: greedy_p1.yml  greedy_p2.yml  greedy_p3.yml  greedy_p4.yml  policy.yml  random.yml  random_p1.yml  random_p2.yml  random_p3.yml  random_p4.yml
stats/colors/5p/: greedy_p1.yml  greedy_p2.yml  greedy_p3.yml  greedy_p4.yml  greedy_p5.yml  policy.yml  random.yml  random_p1.yml  random_p2.yml  random_p3.yml  random_p4.yml  random_p5.yml
stats/tic_tac_toe/: p.yml  policy.yml  r1.yml  r2.yml  random_p1.yml  random_p2.yml
tic_tac_toe/: CMakeLists.txt
tic_tac_toe/include/tic_tac_toe/: game.hpp
tic_tac_toe/src/: game.cpp
